<resources>
    <string name="app_name">Horoscope</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tibetanHoroscope">Tibetan Horoscope</string>
    <string name="individual">individual</string>
    <string name="getYourHoroscope">Get your horoscope</string>
    <string name="uploadImage">Upload image +</string>
    <string name="yesFive">Yes, let me know</string>
    <string name="noFive">Not yet, later</string>
    <string name="doYou">Do you want to see other</string>
    <string name="people">people\'s horoscopes?</string>
    <string name="learn">"Learn about lucky and unlucky days, as well as "</string>
    <string name="learn2">suitable days to work together</string>
    <string name="lunaDay">Luna day</string>
    <string name="introduce">Introduce</string>
    <string name="tibetan">Tibetan Calendar Norbu</string>
    <string name="intro1">All calculations for the horoscope are based on\nImportant, proven sources.\nThe Tibetan calendar can be used as one useful recommendations, but to make a decision important decisions please consider the circumstances your own.\nNorbu means “Jewel” in Tibetan.</string>
    <string name="introt1">Tibetan Astrology</string>
    <string name="intro2">Based on the ancient Kalachakra Tantra, translated from Sanskrit 1025 - 1040.</string>
    <string name="intro3">Lunar days are calculated according to the Pug-Pa system, and corresponds to the calculations of the Western Institute of Medicine Tibet and Tibetan Astrology (Dharmzala, India). In this system the lunar calendar corresponds with solar day and change with dawn,\nTherefore sometimes there are two lunar days and double or missing 1 lunar day</string>
    <string name="Color">Color</string>
    <string name="intro4">Green - A good day\nRed - Negative day\nNo color - Day neutral</string>
    <string name="Astrological">"Astrological indicators"</string>
    <string name="intro5">In the Norbu horoscope, astrological readings are divided into: Health, Business, Circumstances, Lunar, Haircut and Travel.\nThe Health, Business and Travel sections are based on personal data and depend on your date of birth. The Circumstances, Haircut and Lunar Calendar sections are common and the same for everyone. Sometimes there are disagreements about individual and general indicators, this is normal for Tibetan astrology. In this case, the personal indicators of “Health” and “Business” are given top priority. “Circumstances” and “Lunar Calendar” have less influence.</string>
    <string name="Five">Five personal impacts</string>
    <string name="intro6">In Tibetan astrology, a unique method has been developed to describe love a person\'s condition, in terms of the five personal impacts.</string>
    <string name="Lucky">Lucky (Lung Ta - property)</string>
    <string name="intro7">Luck is often associated with good external circumstances. When the relationship between our internal and external energies is harmonious, no adverse circumstances can enter our lives. Symbolizes happiness, luck and the ability to avoid unfavorable situations.</string>
    <string name="Body">Body energy (Lu)</string>
    <string name="intro8">Lu - or body - is immunity, energy physical health, maintain vitality.</string>
    <string name="Manifestation">Manifestation of ability (Vang)</string>
    <string name="intro9">Vang is our personal strength, our ability to achieve our goals. When Golden strong, it promotes wealth and prosperity, avoid unfavorable situations and anything\nWhat can threaten vitality?</string>
    <string name="Lifeforce">Life force (Sog)</string>
    <string name="intro10">Sog is vitality or vital strength.\nSimilar to LA, but more on the domestic side\nmore sets. It provides the possibility of physical development substance of the human body. It is responsible about fertility and sensory perception.</string>
    <string name="Protective">Protective energy (La)</string>
    <string name="intro11">LA - protective energy - responsible for integrity and harmony of personality.\nMaintain resourcefulness. LA is very weak respond to exhaustion and depression.\nLA energy is mobile and circulates in the muscles can. LA provides connection to energies durability of the outside world.</string>
    <string name="MainSource">Main source</string>
    <string name="intro12">Men-Tsee-Khang Institute\n\nInstructions from Professor CH.N. Norbu\n\nNamkhai Norbu Rinpoche. The key to use the Tibetan calendar. M., “Rinchen-Ling”, 1998\n\nNamkhai Norbu Rinpoche. Drung, Deu and Bon. Tradition of legends and language symbolism in ancient Tibetan Bon. M.,\"Libris\", 1998\n\nN.Namkhai Norbu Rinpoche. Book of Death Tibet. Petersburg, \'Shang Shung\', 1999\n\n\"Chzhud-shek\" - a monument of culture Medieval Tibet. Novosibirsk, \"Nauka\'”, 1988</string>
    <string name="privacy1">We respect your preferences concerning the treatment of Information that we may collect. This Privacy Policy explains what kind of information we collect, use, share and the security of your information in relation to our mobile applications (\"Applications\" or \"Apps\") and mobile services (\"Services\"). Please take a moment to familiarize yourself with our privacy practices.\n</string>
    <string name="privacy2">BY INSTALLING THE APPS ON YOUR MOBILE DEVICE, ENTERING INTO, CONNECTING TO, ACCESSING AND/OR USING THE APPS, YOU AGREE TO THE TERMS AND CONDITIONS SET FORTH IN THIS PRIVACY POLICY, INCLUDING TO THE POSSIBLE COLLECTION AND PROCESSING OF YOUR INFORMATION AND YOU ARE CONSENTING TO THE USE OF COOKIES AND OTHER TRACKING TECHNOLOGIES ON YOUR DEVICE. PLEASE NOTE: IF YOU OR, AS\nAPPLICABLE, YOUR LEGAL GUARDIAN, DISAGREE TO ANY TERM PROVIDED HEREIN, YOU MAY NOT INSTALL, ACCESS AND/OR USE THE APPS AND YOU ARE REQUESTED TO PROMPTLY ERASE THEM, AND ANY PART THEREOF, FROM YOUR MOBILE DEVICE.</string>
    <string name="privacy3">Personal Information:</string>
    <string name="privacy4">We do NOT collect any Personal Information about you. \"Personal Information\" means personally identifiable information, such as your name, email address, physical address, calendar entries, contact entries, files, photos, etc.</string>
    <string name="privacy5">Non-Personal Information:</string>
    <string name="privacy46">We collect non-personal information about your use of our Apps and aggregated information regarding the usages of the Apps. \"Non-Personal Information\" means. information that is of an anonymous nature, such as the type of mobile device you use, your mobile devices unique device ID, the IP address of your mobile device, your mobile operating system, and information about the way you use the Applications.</string>
    <string name="privacy7">Changes to our Privacy Policy:</string>
    <string name="privacy8">We may change this Policy at any time. Your continued use of the Apps and Services following the posting of changes will mean you accept those changes.\n\nDate 2019/02/02</string>
    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="Termse">Term of use</string>
    <string name="TibetanNorbu">Tibetan Daily Horoscope Norbu</string>
    <string name="EndAgreement">End User License Agreement</string>
    <string name="TermsConditions"><![CDATA[Terms & Conditions:\n]]></string>
    <string name="term1">By downloading or using the Tibetan Daily Horoscope Norbu mobile application (\"App\"), you agree to be bound by the following terms and conditions. Please read these terms carefully before using the App. You are not permitted to copy, modify, or use our trademarks in any manner. You may not attempt to extract the source code of the App, translate it into other languages, or create derivative versions. All intellectual property rights related to the App belong to Aleksandr Zheleznov (\"Developer\").\n\nWe provide updated content and perform next- year calendar calculations annually, adhering to the Phugpa system adopted by the Menzekan Institute for the Eastern calendar, endorsed by His Holiness the Dalai Lama (http://www.men-tsee-khang.org). We have dedicated significant effort and resources to adapt the Calendar for Western users. Access to all features requires either a Premium 1-year subscription or a Tibetan Lunar Calendar Premium monthly subscription.\n\nThe Developer reserves the right to modify the App or charge for its services at any time and for any reason. We will always provide clear information regarding any charges for the App or its services.\n\nThe Tibetan Daily Horoscope Norbu App does not store or process any personal data provided by users. While the App utilizes third-party services, it does not collect personal data.\n\nRegarding the Developer\'s responsibility for your use of the App, please note that although we strive to keep it updated and accurate, we rely on third-party information. The Developer accepts no liability for any loss, direct or indirect, resulting from relying solely on the App\'s functionality.\nWe offer our users the opportunity to access Tibetan Daily Horoscope Norbu with a subscription option.\n</string>
    <string name="terrm2">SUBSCRIPTIONS AND PAYMENTS\n</string>
    <string name="term4"><![CDATA[We offer users the option to access the App premium features, such as: renewable calendar data, health and business descriptions, adding unlimited friends through a subscription model:\n\nFree Trial: a free-of-charge period, which gives. access to the App premium features.\n\nLifetime purchase: \"Calendar Premium Lifetime\" gives unlimited lifetime access to all premium features.\n\nOne month subscription: \"Tibetan Lunar Calendar Premium\", \"Tibetan Lunar Calendar Promo\"\nsubscription is paid in monthly installments, which gives access to all premium features. By subscribing to One month subscription you can cancel it within the Free Trial period before any charges.\n\nOne year subscription: \"Premium 1 Year\" subscription is paid in yearly installments, which gives access to all premium features. By subscribing to One year subscription you can cancel it within the Free Trial period before any charges.\n\nFor the purposes of our monthly and yearly subscriptions, a month constitutes 30 calendar days and a year constitutes 365 calendar days:\nPayment will be charged to iTunes Account at confirmation of purchase\n\nSubscription automatically renews unless auto- renew is turned off at least 24-hours before the end of the current period\n\nAccount will be charged for renewal within 24- hours prior to the end of the current period\nThe user may manage subscriptions & may turn off auto-renewal by going to Account Settings after purchase\nNo cancellation of the current subscription is allowed during active subscription period\n\nPromo codes: we can offer a promo code for month/year free access to App or a promo code with a specific date range. Note that once the duration of promo code is over, you\'ll be billed at the standard renewal price.\n\nFunctional links to Privacy Policy and Terms of Use (EULA) are provided within the App.]]></string>
    <string name="term5">To cancel a subscription on the Google Play:</string>
    <string name="term6"><![CDATA[On your Android phone or tablet, open the Google Play Store\nCheck if you\'re signed in to the correct Google Account\nTap Menu -> Subscriptions\nSelect the subscription you want to cancel\nTap Cancel subscription\nFollow the instructions.\n\nWe may update the App over time. While the App is currently available on Android & iOS, system requirements may change, and users must download updates to continue using the App. The Developer does not guarantee continual updates or compatibility with all device versions. Additionally, the Developer may terminate the App at any time without prior notice.]]></string>
    <string name="do_you_want_to_exit">Do you want to exit ?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
</resources>